src/css/App.scss
@import "./globals.scss";

body {
  font-family: 'Open Sans', sans-serif;
}

p {
  font-size: 16px;
}

// globals, resets
* {
  box-sizing: border-box;
}

h1, h2, h3, h4, h5, h6 {
  letter-spacing: 2px;
}

ul {
  list-style-type: none;
  padding: 0;
}

// components
button, .button {
  border: 2px solid;
  padding: 13px 30px;
  background-color: transparent;
  color: white;
  font-weight: $semi-bold;
  font-size: 16px;
  letter-spacing: 2px;
  text-decoration: none;

  &.button-yellow {
    border-color: $yellow;
  }

  &.button-borderless {
    border-color: transparent;
  }
}

.sectionTitle {
  font-weight: $bold;
  font-size: 16px;
}

// layout
section {
  background-color: $black;
  min-height: 100vh;
  min-width: 176px;
  padding: 50px 30px;

  text-align: center;

  font-size: calc(10px + 2vmin);
  color: white;

  @media only screen and (min-width: 768px) {
    padding-bottom: 80px;
  }
}

// specifics
.hero {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.titles {
  margin: 0;
  color: $light-gray;
  font-weight: $semi-bold;
  letter-spacing: 2px;
}

.logo {
  max-width: 70vw;
}

.my-work {
  background-color: $yellow;
  justify-content: center;
  position: relative;

  li {
    margin-bottom: 30px;
  }

  a {
    font-size: 40px;
    font-weight: $extra-bold;
    color: white;
    opacity: .4;
    text-decoration: none;

    @media only screen and (min-width: 768px) {
      font-size: 100px;
    }
  }

  a:hover {
    opacity: 1;
  }

  button {
    border-color: white;
    position: absolute;
    bottom: 50px;
    left: 50%;
    transform: translateX(-50%);

    @media only screen and (min-width: 768px) {
      bottom: 80px;
    }
  }
}

.about-me {
  h2 {
    color: $yellow;
  }

  p {
    max-width: 600px;
    margin: 20px auto;
  }

  a {
    width: 220px;
    display: block;
    margin: 20px auto;
    cursor: pointer;
  }

  a.download {
    width: 300px;
  }
}

.contactLinks {
  margin-top: 60px;
}

.profile-pic {
  max-width: 420px;
  width: 90%;
  margin-bottom: 20px;
}

